# gist-rs

./: .dev.vars.example  .gitignore  README.md  package.json  tsconfig.json
functions/: _middleware.js  _middleware.ts  package.json  tsconfig.json
functions/auth/: [provider].ts  _middleware.ts  cookies.ts  index.ts  jwt.ts  phantom.ts  user.ts
functions/auth/google/: callback.ts  index.ts  redirect.ts
functions/error/: index.ts
functions/hello/: [test].rs  [test].ts
functions/lib/cf-auth/: index.ts
functions/lib/cf-auth/providers/google/: index.ts  users.ts
functions/lib/cf-auth/utils/: errors.ts  helpers.ts  logger.ts
functions/lib/diff/: member.ts
functions/nft/: [address].ts
functions/proxy/: [url].ts
functions/transfer/: [command].ts
functions/u/: [user].ts
functions/utils/: jwt.ts
model/: session.ts
public/: 404.html  auth.html  diff.css  diff.html  index.html  index.tsx  style.css
public/components/: DragButton.tsx  NavBar.tsx  Seat.tsx  SeatReservation.tsx
public/contexts/: AppContext.ts
public/hooks/: useSyncReserves.ts
public/lib/: cf.ts  qr.ts  web3lite.ts
public/lib/w3l/: client.ts  converter.ts  index.ts  mobile.ts  wallet.ts
public/models/: SeatType.ts
public/pages/: Auth.tsx  Diff.tsx  Home.tsx  Sponsor.tsx
public/services/: reservations.test.ts  reservations.ts
public/utils/: date.ts  env.ts
worker/web3lite/: Cargo.toml  README.md  package.json  wrangler.toml
worker/web3lite/src/: lib.rs  phantom.rs  web3lite.rs
worker/web3lite/src/handlers/: guard.rs  memo.rs  mod.rs  nft.rs  pay.rs  proxy.rs  transfer.rs
worker/web3lite/src/tools/: minter.rs  mod.rs  token.rs
